force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Custom object to record bookings for Fraud, Error and Non-Compliance (FENC) assessments</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>BOO-{00000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>