force-app/main/default/objects/Booking__c/fields/Booking_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Booking_Checklist__c</fullName>
    <label>Booking Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crib Sheets Reviewed</fullName>
            </value>
            <value>
                <fullName>Checklist Item 1</fullName>
            </value>
            <value>
                <fullName>Checklist Item 2</fullName>
            </value>
            <value>
                <fullName>Checklist Item 3</fullName>
            </value>
            <value>
                <fullName>Checklist Item 4</fullName>
            </value>
            <value>
                <fullName>Checklist Item 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>