force-app/main/default/objects/Booking__c/fields/Booking_Officer__c.field-meta.xml
<CustomField>
    <fullName>Booking_Officer__c</fullName>
    <description>Text field used to record the booking officer.</description>
    <label>Booking Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>