force-app/main/default/objects/Booking__c/fields/Inspecting_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspecting_Officer_Name__c</fullName>
    <label>Inspecting Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>