force-app/main/default/objects/Booking__c/fields/Inspecting_Officer_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspecting_Officer_Type__c</fullName>
    <label>Inspecting Officer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior Inspector</fullName>
            </value>
            <value>
                <fullName>Junior Inspector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>