force-app/main/default/objects/Booking__c/fields/Site_Inspection_Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Site_Inspection_Sub_Types__c</fullName>
    <label>Site Inspection Sub-Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>