force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Date__c</columns>
    <columns>Booking_Time__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>FENC_Activity__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Inspecting_Officer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>